...
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms set in Clock.</string>

    <!-- Entries listed in the setting for the side-button action. -->
    <string name="time_picker_ampm_label" translatable="false">--</string>

    <!-- Values for the side-button setting. -->
    <string name="time_picker_00_label" translatable="false" tools:ignore="MissingTranslation">:00</string>

    <!-- Title of the ringtone setting. -->
    <string name="time_picker_30_label" translatable="false" tools:ignore="MissingTranslation">:30</string>

    <!-- Accessibility labels for Clock activity buttons -->
    <string-array name="alarm_set">
        <item>Alarm set for less than 1 minute from now.</item>
        <item>Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</item>
...
