<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_fragment_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="72dp"
        android:layout_weight="1"
        tools:listitem="@layout/list_row_bold" />

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="?attr/listFabColor"
        android:backgroundTintMode="src_atop"
        android:elevation="6dp"
        android:src="@drawable/ic_baseline_add_24"
        app:fab_colorNormal="?attr/listFabColor"
        app:fab_colorPressed="?attr/listFabColor" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>